--- a/app.html
+++ b/app.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
-    <title>Document</title>
+    <title>Proyecto 2025</title>
 </head>
 <body>
-    
+    <h1>Bienvenido a la App</h1>
+    <div id="resultado">Cargando monto...</div> <!-- Aquí se mostrará el monto -->
+
+    <script src="app.js" defer></script> <!-- Enlazamos el archivo JS -->
 </body>
 </html>
